--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 #BaseUrl="https://api.github.com/"
-BaseUrl="https://api.github.com/"
+BaseUrl="https://jsonplaceholder.typicode.com/"
+
